# TinyTun

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.bat  build.rs  build.sh  config.json  config.yaml  how-to-work.md  test_tun.rs
.cargo/: config.toml
.github/actions/build-ebpf/: action.yml
.github/workflows/: ci.yml  test.yml
bpf/: tinytun.bpf.c
bpf/include/linux/: bpf.h
ebpf/: Cargo.toml  rust-toolchain.toml
ebpf/src/: main.rs
src/: config.rs  dns_handler.rs  dns_hijack.rs  dns_router.rs  ebpf_inbound.rs  ebpf_ingress.rs  ebpf_loader.rs  ebpf_mode.rs  error.rs  geosite.rs  main.rs  packet_processor.rs  process_lookup.rs  route_manager.rs  socks5_client.rs  tun_device.rs
src/common/: error.rs
src/kernel/: Cargo.toml  xdp_router.rs
src/packet/: bypass.rs  direct.rs  mod.rs  packet_build.rs  route.rs  shared.rs  tcp.rs  udp.rs
tinytun-common/: Cargo.toml
tinytun-common/src/: lib.rs
tinytun-ebpf/: Cargo.toml
tinytun-ebpf/.cargo/: config.toml
tinytun-ebpf/src/: main.rs
