[package]
name = "tinytun"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based tun2socks implementation with SOCKS5 support and DNS handling"
license = "GPL-3.0-or-later"

[dependencies]
# TUN device management
tun = { version = "0.8.0", features = ["async"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Networking and protocol support
socket2 = "0.5"
ipnet = "2.1"
ipnetwork = "0.20"
route_manager = "0.2.11"
bytes = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
etherparse = "0.14"
netstat2 = "0.11.2"

# SOCKS5 implementation
socks5-impl = "0.1.0"

# Encrypted DNS (DoT / DoH / DoQ)
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks", "http2"] }
quinn = { version = "0.11", features = ["ring", "runtime-tokio"] }

# DNS routing
lru = "0.12"
regex = "1"

# Configuration and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"
windows = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_NetworkManagement_WindowsFirewall",
] }

[dev-dependencies]
tokio-test = "0.4"
