[workspace]
members = ["tinytun-common", "tinytun-ebpf"]
# Exclude tinytun-ebpf from the default build so that `cargo build` in the
# workspace root does not attempt to compile the eBPF crate for the host target.
exclude = ["tinytun-ebpf"]
resolver = "2"

[package]
name = "tinytun"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based tun2socks implementation with SOCKS5 support and DNS handling"
license = "GPL-3.0-or-later"

[features]
# Enable the eBPF-based inbound traffic filter (Linux only).
# Requires: Rust nightly toolchain, bpf-linker, and a Linux kernel ≥ 4.20.
# Install prerequisites with:
#   rustup toolchain install nightly
#   rustup component add rust-src --toolchain nightly
#   cargo install bpf-linker
# Then build with:
#   cargo build --features ebpf-inbound
ebpf-inbound = ["dep:aya", "dep:aya-log", "dep:tinytun-common"]

[dependencies]
# TUN device management
tun = { version = "0.8.0", features = ["async"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Networking and protocol support
socket2 = "0.5"
ipnet = "2.1"
ipnetwork = "0.20"
route_manager = "0.2.11"
bytes = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
etherparse = "0.14"
netstat2 = "0.11.2"

# SOCKS5 implementation
socks5-impl = "0.1.0"

# Encrypted DNS (DoT / DoH / DoQ)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12", "logging"] }
webpki-roots = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks", "http2"] }
quinn = { version = "0.11", features = ["ring", "runtime-tokio"] }

# DNS routing
lru = "0.12"
regex = "1"

# Configuration and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
libc = "0.2"

# eBPF user-space support (Linux only, requires ebpf-inbound feature).
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13.1", features = ["async_tokio"], optional = true }
aya-log = { version = "0.2.1", optional = true }
tinytun-common = { path = "tinytun-common", features = ["aya"], optional = true }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"
windows = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_NetworkManagement_WindowsFirewall",
] }

[build-dependencies]
# aya-build is only used on Linux (build.rs returns early on other OSes).
aya-build = "0.1.3"

[dev-dependencies]
tokio-test = "0.4"
