[package]
name = "tinytun"
version = "0.0.2"
edition = "2021"
authors = ["tinytun developers <tinytun@v2raya.org>"]
description = "A tun2socks tool with custom routing and SOCKS5 proxy"
license = "GPL-3.0-or-later"

[features]
# Enable eBPF-based process exclusion (Linux only).
# Requires a pre-built eBPF object at ebpf/target/bpfel-unknown-none/release/tinytun-ebpf.
# Build it first: cd ebpf && cargo +nightly build -Z build-std=core --target bpfel-unknown-none --release
ebpf = ["aya", "aya-log"]

[dependencies]
# TUN device management
tun-rs = { version = "2.8.2", features = ["async_tokio"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Networking and protocol support
socket2 = "0.5"
ipnet = "2.1"
ipnetwork = "0.20"
route_manager = "0.2.11"
bytes = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
etherparse = "0.14"

# SOCKS5 implementation
socks5-impl = "0.1.0"

# Encrypted DNS (DoT / DoH / DoQ)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12", "logging"] }
webpki-roots = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks", "http2"] }
quinn = { version = "0.11", features = ["ring", "runtime-tokio"] }

# DNS routing
lru = "0.12"
regex = "1"

# Configuration and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
libc = "0.2"

# eBPF user-space loader (optional, Linux only, enabled by the `ebpf` feature)
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }

# sysinfo is not used on FreeBSD because its FreeBSD backend requires libkvm/libprocstat
# which are unavailable in Zig cross-compilation sysroots. FreeBSD uses sysctl instead.
[target.'cfg(not(target_os = "freebsd"))'.dependencies]
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"
windows = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_NetworkManagement_WindowsFirewall",
] }

[dev-dependencies]
tokio-test = "0.4"
